--- a/seo/ChoesinCraft/index.html
+++ b/seo/ChoesinCraft/index.html
@@ -38,7 +38,7 @@
           <label>Contraseña</label><input type="password" name="Contraseña" id="pass">
           <input type="button" class="btnm" name id="btn1" value="-" onclick="pass()">
           <input type="button" class="btnm" name id="btn2" value="o" onclick="passNo()" style="display: none"></br>
-          <input type="button" class="btn" name id="btn" value="Verificar" onclick="validar()">
+          <input type="button" class="btn" name id="btn" value="Verificar" onclick="download()">
           <p id="no"></p>
         </div>
         <div class="contenedor" id="descargar" style="display: none">
