--- a/addons/Waila.html
+++ b/addons/Waila.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Addons|AdrianCraft</title>
+    <title>Waila(addon)|AdrianCraft</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
+    <script src="/js/download.js"></script>
   </head>
   <body>
     <header>
@@ -18,8 +19,7 @@
         <a href="/seo">SeoMC99</a>
       </nav>
       <section class="textos-header">
-        <h1>Mejora tu Minecraft</h1>
-        <h2>Con estos addons</h2>
+        <h1>Waila</h1>
       </section>
       <div class="wave">
         <svg viewBox="0 0 500 150" preserveAspectRatio="none">
@@ -29,53 +29,25 @@
     </header>
     <main>
       <section class="section-1">
+        <h4 class="titulo">Waila</h4>
+        <div class="texto-box">
+          <h3 class="texto">
+            "Waila" te muestra lo que estas viendo ya sea una entidad o un bloque sea vanilla o de otro addon ademas de ser configurable con el Waila config
+          </h3>
+        </div>
+        <div class="galeria-port">
+          <div class="imagen-craft">
+            <img src="/img/addons/waila/config.png" alt="" />
+          </div>
+        </div>
         <div class="contenedor">
-          <h4 class="titulo">Addons</h4>
           <div class="galeria-port">
             <div class="imagen-port">
               <img src="/img/addons/waila/icono.png" alt="" />
-              <a href="/addons/Waila">
+              <a id="download" href="https://www.mediafire.com/file/gyquwctrrw13qa7/Waila.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
-                  <p>Waila</p>
-                </div>
-              </a>
-            </div>
-            <div class="imagen-port">
-              <img src="/img/addons/Home/icono.png" alt="" />
-              <a href="/addons/Home">
-                <div class="hover-galeria">
-                  <img src="/img/click.png" alt="" />
-                  <p>Home</p>
-                </div>
-              </a>
-            </div>
-            <div class="imagen-port">
-              <img src="/img/proximamente.png" alt="" />
-              <a href="/addons/Fundas-de-equipamiento">
-                <div class="hover-galeria">
-                  <img src="/img/click.png" alt="" />
-                  <p>Fundas de equipamiento</p>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="galeria-port">
-            <div class="imagen-port">
-              <img src="/img/addons/chisel/icono.png" alt="" />
-              <a href="/addons/Chisel">
-                <div class="hover-galeria">
-                  <img src="/img/click.png" alt="" />
-                  <p>Chisel</p>
-                </div>
-              </a>
-            </div>
-            <div class="imagen-port">
-              <img src="/img/addons/Variantes-de-madera/icono.png" alt="" />
-              <a href="/addons/Variantes-de-maderas">
-                <div class="hover-galeria">
-                  <img src="/img/click.png" alt="" />
-                  <p>Variantes de madera</p>
+                  <p>Descargar</p>
                 </div>
               </a>
             </div>
