--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
           <h2 class="titulo">Addon mas reciente</h2>
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/addons/chisel/icono.png" alt="">
-              <a href="/addons/Chisel">
+              <img src="/img/addons/waila/icono.png" alt="">
+              <a href="/addons/Waila">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="">
-                  <p>Chisel</p>
+                  <p>Waila</p>
                 </div>
               </a>
             </div>
