--- a/seo/index.html
+++ b/seo/index.html
@@ -33,6 +33,15 @@
           <h2 class="titulo">Addons</h2>
           <div class="galeria-port">
             <div class="imagen-port">
+              <img src="/img/seo/home/icono.png" alt="" />
+              <a href="Home">
+                <div class="hover-galeria">
+                  <img src="/img/click.png" alt="" />
+                  <p>Addon de Home</p>
+                </div>
+              </a>
+            </div>
+            <div class="imagen-port">
               <img src="/img/seo/icono.png" alt="" />
               <a href="ChoesinCraft">
                 <div class="hover-galeria">
