--- a/seo/Home.html
+++ b/seo/Home.html
@@ -23,7 +23,7 @@
 			<a href="/seo">SeoMC99</a>
 		</nav>
 		<section class="textos-header">
-			<h1>Home/h1>
+			<h1>Home</h1>
 		</section>
 		<div class="wave">
 			<svg viewBox="0 0 500 150" preserveAspectRatio="none">
