--- a/seo/Home.html
+++ b/seo/Home.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="/css/links.css" />
 	<link rel="stylesheet" href="/css/estilos.css" />
 	<link rel="stylesheet" href="/css/botones.css" />
-  <script src="/js/seo/ChoesinCraft.js"></script>
+  <script src="/js/seo/login.js"></script>
   <script src="/js/download.js"></script>
 </head>
 
