--- a/addons/index.html
+++ b/addons/index.html
@@ -33,7 +33,16 @@
           <h4 class="titulo">Addons</h4>
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/addons/waila/icono.png" alt="" />
+              <img src="/img/addons/Iron-Chest/icono.png" alt="" />
+              <a href="/addons/Iron-Chest">
+                <div class="hover-galeria">
+                  <img src="/img/click.png" alt="" />
+                  <p>Waila</p>
+                </div>
+              </a>
+            </div>
+            <div class="imagen-port">
+              <img src="/img/addons/Waila/icono.png" alt="" />
               <a href="/addons/Waila">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
@@ -62,7 +71,7 @@
           </div>
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/addons/chisel/icono.png" alt="" />
+              <img src="/img/addons/Chisel/icono.png" alt="" />
               <a href="/addons/Chisel">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
