--- a/addons/Waila.html
+++ b/addons/Waila.html
@@ -37,13 +37,13 @@
         </div>
         <div class="galeria-port">
           <div class="imagen-craft">
-            <img src="/img/addons/waila/config.png" alt="" />
+            <img src="/img/addons/Waila/config.png" alt="" />
           </div>
         </div>
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/addons/waila/icono.png" alt="" />
+              <img src="/img/addons/Waila/icono.png" alt="" />
               <a id="download" href="https://www.mediafire.com/file/s3c7q2cpa67w5ht/Waila.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
