--- a/addons/Waila.html
+++ b/addons/Waila.html
@@ -9,23 +9,16 @@
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
     <script src="/js/download.js"></script>
+    <script src="/js/api/data.js"></script>
+    <script src="/js/api/runner.js"></script>
   </head>
   <body>
     <header>
       <nav>
-        <a href="/">Inicio</a>
-        <a href="/addons">Addons</a>
-        <a href="/texturas">Texturas</a>
-        <a href="/seo">SeoMC99</a>
       </nav>
       <section class="textos-header">
         <h1>Waila</h1>
       </section>
-      <div class="wave">
-        <svg viewBox="0 0 500 150" preserveAspectRatio="none">
-          <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"></path>
-        </svg>
-      </div>
     </header>
     <main>
       <section class="section-1">
@@ -56,27 +49,6 @@
       </section>
     </main>
     <footer>
-      <div class="contenedor-footer">
-        <div class="content-foo">
-          <h4>Discord</h4>
-          <a class="link-s"  target="_blank" href="https://discord.gg/9BqzsNpvpS">AgaCraft</a>
-        </div>
-        <div class="content-foo">
-          <h4>Correo electronico</h4>
-          <a
-            target="_blank"
-            class="link-s"
-            href="mailto:agacraft.addons@gmail.com?body=Hola AdrianCraft,
-          Me comunico contigo para decirte"
-            >agacraft.addons@gmail.com</a
-          >
-        </div>
-        <div class="content-foo">
-          <h4>YouTube</h4>
-          <a class="link-s" target="_blank" href="https://www.youtube.com/channel/UCSJAPPOzlybP_xSJj-E5W3w">AdrianCraft</a>
-        </div>
-      </div>
-      <h2 class="titulo-final">&copy; AdrianCraft</h2>
     </footer>
   </body>
 </html>
