--- a/seo/index.html
+++ b/seo/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/estilos.css" />
     <script src="/js/api/data.js"></script>
     <script src="/js/api/runner.js"></script>
+    <script>addApiTA('seo');</script>
   </head>
   <body>
     <header>
@@ -19,11 +20,10 @@
         <h1>Aqui estan los addons para SeoMC99</h1>
       </section>
     </header>
-
     <main>
       <section class="section-1">
         <div class="contenedor">
-          <h2 class="titulo">Addons</h2>
+          <h2 class="titulo">Contenido</h2>
           <div class="galeria-port">
           </div>
         </div>
@@ -33,3 +33,4 @@
     </footer>
   </body>
 </html>
+
