--- a/texturas/index.html
+++ b/texturas/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Addons|AdrianCraft</title>
+    <title>Texturas|AdrianCraft</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
@@ -24,7 +24,7 @@
     <main>
       <section class="section-1">
         <div class="contenedor">
-          <h4 class="titulo">Addons</h4>
+          <h4 class="titulo">Texturas</h4>
           <div class="galeria-port">
           </div>
         </div>
