--- a/JunMC13/index.html
+++ b/JunMC13/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Contenido de SeoMC99|AdrianCraft</title>
+    <title>Contenido de JunMC13|AdrianCraft</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
@@ -17,7 +17,7 @@
       <nav>
       </nav>
       <section class="textos-header">
-        <h1>Aqui estan los addons para SeoMC99</h1>
+        <h1>Aqui esta el contenido para JunMC13</h1>
       </section>
     </header>
     <main>
