--- a/JunMC13/index.html
+++ b/JunMC13/index.html
@@ -13,7 +13,7 @@
     <script>addApiTA('JunMC13');</script>
   </head>
   <body>
-    <header>
+    <header id="JunMC13">
       <nav>
       </nav>
       <section class="textos-header">
