--- a/JunMC13/ChoesinCraft.html
+++ b/JunMC13/ChoesinCraft.html
@@ -37,7 +37,7 @@
         <div class="contenedor" id="descargar" style="display: none">
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/JunMC13/icono.png" alt="" />
+              <img src="/img/JunMC13/ChoesinCraft/icono.png" alt="" />
               <a id="download" href="" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
