--- a/JunMC13/Home.html
+++ b/JunMC13/Home.html
@@ -10,6 +10,8 @@
 	<link rel="stylesheet" href="/css/links.css" />
 	<link rel="stylesheet" href="/css/estilos.css" />
 	<link rel="stylesheet" href="/css/botones.css" />
+  <script src="/js/JunMC13/data.js"></script>
+  <script src="/js/login.js"></script>
   <script src="/js/JunMC13/login.js"></script>
   <script src="/js/download.js"></script>
   <script src="/js/api/data.js"></script>
