--- a/addons/Iron-Chest.html
+++ b/addons/Iron-Chest.html
@@ -17,7 +17,7 @@
       <nav>
       </nav>
       <section class="textos-header">
-        <h1>Home</h1>
+        <h1>Iron Chest</h1>
       </section>
     </header>
     <main>
@@ -26,12 +26,6 @@
         <div class="texto-box">
           <h3 class="texto">
             "Iron Chest" agrega cofres de Hierro, Oro, Diamante, Cobre y Cristal
-          </h3>
-          <h3 class="texto">
-            \home set casa<br>
-            \home go casa<br>
-            \home remove casa<br>
-            \home list
           </h3>
         </div>
         <div class="contenedor">
