--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="Página para descargar los addons para Minecraft Bedrock hechos por AdriánCraft">
+    <meta name="description" content="Página para descargar los addons de Minecraft Bedrock hechos por AdriánCraft">
+    <meta property="og:title" content="AdrianCraft">
+    <meta property="og:site_name" content="YouTube">
+    <meta property="og:url" content="/">
+    <meta property="og:image" content="/img/favicon.png">
+    <meta property="og:image:width" content="900">
+    <meta property="og:image:height" content="900">
+    <meta property="og:description" content="Página para descargar los addons de Minecraft Bedrock hechos por AdriánCraft">
     <title>Inicio|AdrianCraft</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/links.css" />
