--- a/addons/Fundas-de-equipamiento.html
+++ b/addons/Fundas-de-equipamiento.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Fundas de equipamiento(addon)|AdrianCraft</title>
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/links.css" />
-    <link rel="stylesheet" href="/css/estilos.css" />
+    <link rel="shortcut icon" href="/src/img/icono.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/src/css/links.css" />
+    <link rel="stylesheet" href="/src/css/estilos.css" />
     <script src="/js/download.js"></script>
     <script src="/js/api/data.js"></script>
     <script src="/js/api/runner.js"></script>
@@ -35,77 +35,77 @@
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_aga.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_aga.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_black.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_black.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_blue.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_blue.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_brown.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_brown.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_cyan.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_cyan.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_gag.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_gag.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_gray.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_gray.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_green.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_green.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_koopa.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_koopa.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_light_blue.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_light_blue.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_lime.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_lime.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_magenta.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_magenta.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_orange.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_orange.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_pink.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_pink.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_purple.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_purple.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_red.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_red.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_seo.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_seo.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_silver.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_silver.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_stk.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_stk.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_white.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_white.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Fundas-de-equipamiento/elytra_yellow.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/elytra_yellow.png" alt="" />
             </div>
           </div>
         </div>
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/addons/Fundas-de-equipamiento/icono.png" alt="" />
+              <img src="/src/img/addons/Fundas-de-equipamiento/icono.png" alt="" />
               <a id="download" href="https://www.mediafire.com/file/wv8p3259uxkt7ry/Fundas-de-equipamento.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
-                  <img src="/img/click.png" alt="" />
+                  <img src="/src/img/click.png" alt="" />
                   <p>Descargar</p>
                 </div>
               </a>
