--- a/addons/Variantes-de-madera.html
+++ b/addons/Variantes-de-madera.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Variantes de madera(addon)|AdrianCraft</title>
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/links.css" />
-    <link rel="stylesheet" href="/css/estilos.css" />
+    <link rel="shortcut icon" href="/src/img/icono.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/src/css/links.css" />
+    <link rel="stylesheet" href="/src/css/estilos.css" />
     <script src="/js/download.js"></script>
     <script src="/js/api/data.js"></script>
     <script src="/js/api/runner.js"></script>
@@ -32,22 +32,22 @@
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-craft">
-              <img src="/img/addons/Variantes-de-madera/mesa-de-tallado.gif" alt="" />
+              <img src="/src/img/addons/Variantes-de-madera/mesa-de-tallado.gif" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Variantes-de-madera/Palos.gif" alt="" />
+              <img src="/src/img/addons/Variantes-de-madera/Palos.gif" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Variantes-de-madera/soporte-de-armadura.gif" alt="" />
+              <img src="/src/img/addons/Variantes-de-madera/soporte-de-armadura.gif" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Variantes-de-madera/mesa-de-crafteo.png" alt="" />
+              <img src="/src/img/addons/Variantes-de-madera/mesa-de-crafteo.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Variantes-de-madera/Cofres.png" alt="" />
+              <img src="/src/img/addons/Variantes-de-madera/Cofres.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Variantes-de-madera/Librerias.png" alt="" />
+              <img src="/src/img/addons/Variantes-de-madera/Librerias.png" alt="" />
             </div>
           </div>
         </div>
@@ -59,10 +59,10 @@
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/addons/Variantes-de-madera/icono.png" alt="" />
+              <img src="/src/img/addons/Variantes-de-madera/icono.png" alt="" />
               <a id="download" href="https://www.mediafire.com/file/33w1ylafln149fh/Variantes_de_maderas.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
-                  <img src="/img/click.png" alt="" />
+                  <img src="/src/img/click.png" alt="" />
                   <p>Descargar</p>
                 </div>
               </a>
