--- a/texturas/Escudo-secundario.html
+++ b/texturas/Escudo-secundario.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Escudo secundario|AdrianCraft</title>
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/links.css" />
-    <link rel="stylesheet" href="/css/estilos.css" />
+    <link rel="shortcut icon" href="/src/img/icono.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/src/css/links.css" />
+    <link rel="stylesheet" href="/src/css/estilos.css" />
     <script src="/js/download.js"></script>
     <script src="/js/api/data.js"></script>
     <script src="/js/api/runner.js"></script>
@@ -33,7 +33,7 @@
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-craft">
-              <img src="/img/texturas/Escudo-secundario/comparacion.png" alt="" />
+              <img src="/src/img/texturas/Escudo-secundario/comparacion.png" alt="" />
             </div>
           </div>
         </div>
@@ -45,10 +45,10 @@
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/texturas/Escudo-secundario/icono.png" alt="" />
+              <img src="/src/img/texturas/Escudo-secundario/icono.png" alt="" />
               <a id="download" href="https://www.mediafire.com/file/ap37rj07w05lxew/Escudo_secundario.mcpack/file" target="_blank">
                 <div class="hover-galeria">
-                  <img src="/img/click.png" alt="" />
+                  <img src="/src/img/click.png" alt="" />
                   <p>Escudo secundario</p>
                 </div>
               </a>
