--- a/JunMC13/Texturas.html
+++ b/JunMC13/Texturas.html
@@ -6,10 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<title>Texturas(addon)|AdrianCraft</title>
-	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
-	<link rel="stylesheet" href="/css/links.css" />
-	<link rel="stylesheet" href="/css/estilos.css" />
-	<link rel="stylesheet" href="/css/botones.css" />
+	<link rel="shortcut icon" href="/src/img/icono.ico" type="image/x-icon" />
+	<link rel="stylesheet" href="/src/css/links.css" />
+	<link rel="stylesheet" href="/src/css/estilos.css" />
+	<link rel="stylesheet" href="/src/css/botones.css" />
   <script src="/js/login.js"></script>
   <script src="/js/download.js"></script>
   <script src="/js/api/data.js"></script>
