--- a/addons/Chisel.html
+++ b/addons/Chisel.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Chisel(addon)|AdrianCraft</title>
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/links.css" />
-    <link rel="stylesheet" href="/css/estilos.css" />
-    <link rel="stylesheet" href="/css/tablas.css" />
+    <link rel="shortcut icon" href="/src/img/icono.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/src/css/links.css" />
+    <link rel="stylesheet" href="/src/css/estilos.css" />
+    <link rel="stylesheet" href="/src/css/tablas.css" />
     <script src="/js/download.js"></script>
     <script src="/js/esconder.js"></script>
     <script src="/js/api/data.js"></script>
@@ -35,13 +35,13 @@
         <div class="contenedor" id="div1" style="display: none">
           <div class="galeria-port">
             <div class="imagen-craft">
-              <img src="/img/addons/Chisel/Chisel.png" alt="" />
+              <img src="/src/img/addons/Chisel/Chisel.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Chisel/offsettool.png" alt="" />
+              <img src="/src/img/addons/Chisel/offsettool.png" alt="" />
             </div>
             <div class="imagen-craft">
-              <img src="/img/addons/Chisel/lavastone.png" alt="" />
+              <img src="/src/img/addons/Chisel/lavastone.png" alt="" />
             </div>
           </div>
           <div class="texto-box">
@@ -189,10 +189,10 @@
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/addons/Chisel/icono.png" alt="" />
+              <img src="/src/img/addons/Chisel/icono.png" alt="" />
               <a id="download" href="https://www.mediafire.com/file/9kxrq09jv1ee6hl/Aga_Chisel_v1.0.0.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
-                  <img src="/img/click.png" alt="" />
+                  <img src="/src/img/click.png" alt="" />
                   <p>Descargar</p>
                 </div>
               </a>
