--- a/addons/Iron-Chest.html
+++ b/addons/Iron-Chest.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Iron Chest(addon)|AdrianCraft</title>
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/links.css" />
-    <link rel="stylesheet" href="/css/estilos.css" />
+    <link rel="shortcut icon" href="/src/img/icono.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/src/css/links.css" />
+    <link rel="stylesheet" href="/src/css/estilos.css" />
     <script src="/js/download.js"></script>
     <script src="/js/api/data.js"></script>
     <script src="/js/api/runner.js"></script>
@@ -31,10 +31,10 @@
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/addons/Iron-Chest/icono.png" alt="" />
+              <img src="/src/img/addons/Iron-Chest/icono.png" alt="" />
               <a id="download" href="https://www.mediafire.com/file/fcq4md6t1n8n0lj/Iron-Chest.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
-                  <img src="/img/click.png" alt="" />
+                  <img src="/src/img/click.png" alt="" />
                   <p>Descargar</p>
                 </div>
               </a>
