--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
       <section class="section-1">
         <h4 class="titulo">404</h4>
         <div class="texto-box">
-          <h3 class="texto"> No debeias estar aqui </h3>
+          <h3 class="texto"> No deberias estar aqui </h3>
           <h3 class="texto"> Asegurate de que la pagina que buscas exista o que este bien escrita.</h3>
         </div>
         <div class="galeria-port"></div>
