new login system

--- a/JunMC13/Home.html
+++ b/JunMC13/Home.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Home(addon)|AdrianCraft</title>
+	<title>Test(addon)|AdrianCraft</title>
 	<link rel="shortcut icon" href="/src/img/icono.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="/src/css/links.css" />
 	<link rel="stylesheet" href="/src/css/estilos.css" />
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header id="JunMC13">
+  <header id="JunMC13">
 		<nav>
 		</nav>
 		<section class="textos-header">
@@ -34,6 +34,19 @@
           <p id="no"></p>
         </div>
       </section>
+			<div class="contenedor" style="display: none;">
+				<div class="galeria-port">
+					<div class="imagen-port">
+						<img src="/src/img/JunMC13/Home/icono.png" alt="" />
+						<a id="login-download" href="" target="_blank">
+							<div class="hover-galeria">
+								<img src="/src/img/click.png" alt="" />
+								<p>Descargar</p>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
     </main>
     <footer>
     </footer>
