--- a/JunMC13/Test.html
+++ b/JunMC13/Test.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Texturas(addon)|AdrianCraft</title>
+	<title>Test(addon)|AdrianCraft</title>
 	<link rel="shortcut icon" href="/src/img/icono.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="/src/css/links.css" />
 	<link rel="stylesheet" href="/src/css/estilos.css" />
@@ -17,11 +17,11 @@
 </head>
 
 <body>
-    <header id="JunMC13">
+  <header id="JunMC13">
 		<nav>
 		</nav>
 		<section class="textos-header">
-			<h1>ChoesinCraft</h1>
+			<h1>Home</h1>
 		</section>
 	</header>
 	<main>
@@ -30,14 +30,14 @@
 				<label>Usuario</label><input type="text" name="Usuario" id="user"></br>
           <label>Contraseña</label><input type="password" name="Contraseña" id="pass">
           <input type="button" class="btnm" id="btnpass" value="-" onclick="pass()">
-          <input type="button" class="btn" id="btn" value="Verificar" onclick="download('JunMC13', 'Texturas')">
+          <input type="button" class="btn" id="btn" value="Verificar" onclick="download('JunMC13', 'Home')">
           <p id="no"></p>
         </div>
       </section>
 			<div class="contenedor" style="display: none;">
 				<div class="galeria-port">
 					<div class="imagen-port">
-						<img src="/src/img/proximamente.png" alt="" />
+						<img src="/src/img/JunMC13/Home/icono.png" alt="" />
 						<a id="login-download" href="" target="_blank">
 							<div class="hover-galeria">
 								<img src="/src/img/click.png" alt="" />
