--- a/JunMC13/Texturas.html
+++ b/JunMC13/Texturas.html
@@ -34,7 +34,7 @@
           <p id="no"></p>
         </div>
       </section>
-			<div class="contenedor" style="display: none;">
+			<div class="contenedor">
 				<div class="galeria-port">
 					<div class="imagen-port">
 						<img src="/src/img/proximamente.png" alt="" />
