--- a/Test.html
+++ b/Test.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="/src/css/links.css" />
 	<link rel="stylesheet" href="/src/css/estilos.css" />
 	<link rel="stylesheet" href="/src/css/botones.css" />
-  <script src="/js/login.js"></script>
+  <script src="/js/test/login.js"></script>
   <script src="/js/download.js"></script>
   <script src="/js/api/data.js"></script>
   <script src="/js/api/runner.js"></script>
@@ -34,7 +34,7 @@
           <p id="no"></p>
         </div>
       </section>
-			<div class="contenedor" style="display: none;">
+			<div class="contenedor">
 				<div class="galeria-port">
 					<div class="imagen-port">
 						<img src="/src/img/JunMC13/Home/icono.png" alt="" />
