--- a/Test.html
+++ b/Test.html
@@ -28,27 +28,27 @@
 		<section class="section-1">
 			<div class="centro" id="login">
 				<label>Usuario</label><input type="text" name="Usuario" id="user"></br>
-          <label>Contraseña</label><input type="password" name="Contraseña" id="pass">
-          <input type="button" class="btnm" id="btnpass" value="-" onclick="pass()">
-          <input type="button" class="btn" id="btn" value="Verificar" onclick="download('JunMC13', 'Home')">
-          <p id="no"></p>
-        </div>
-      </section>
-			<div class="contenedor">
-				<div class="galeria-port">
-					<div class="imagen-port">
-						<img src="/src/img/JunMC13/Home/icono.png" alt="" />
-						<a id="login-download" href="" target="_blank">
-							<div class="hover-galeria">
-								<img src="/src/img/click.png" alt="" />
-								<p>Descargar</p>
-							</div>
-						</a>
-					</div>
+        <label>Contraseña</label><input type="password" name="Contraseña" id="password">
+        <input type="button" class="btnm" id="btnpass" value="-" onclick="pass()">
+        <input type="button" class="btn" id="btn" value="Verificar" onclick="download('JunMC13', 'Home')">
+        <p id="no"></p>
+      </div>
+    </section>
+		<div class="contenedor" style="display: none;">
+			<div class="galeria-port">
+				<div class="imagen-port">
+					<img src="/src/img/JunMC13/Home/icono.png" alt="" />
+					<a id="login-download" href="" target="_blank">
+						<div class="hover-galeria">
+							<img src="/src/img/click.png" alt="" />
+							<p>Descargar</p>
+						</div>
+					</a>
 				</div>
 			</div>
-    </main>
-    <footer>
-    </footer>
-  </body>
+		</div>
+  </main>
+  <footer>
+  </footer>
+</body>
 </html>
