--- a/JunMC13/Texturas.html
+++ b/JunMC13/Texturas.html
@@ -33,6 +33,33 @@
           <input type="button" class="btn" id="btn" value="Verificar" onclick="download('JunMC13', 'Texturas')">
           <p id="no"></p>
         </div>
+
+		<div class="contenedor" style="display: none;">
+
+			<div class="galeria-port">
+
+				<div class="imagen-port">
+
+					<img src="/src/img/JunMC13/Home/icono.png" alt="" />
+
+					<a id="login-download" href="" target="_blank">
+
+						<div class="hover-galeria">
+
+							<img src="/src/img/click.png" alt="" />
+
+							<p>Descargar</p>
+
+						</div>
+
+					</a>
+
+				</div>
+
+			</div>
+
+		</div>
+
       </section>
     </main>
     <footer>
