--- a/Test.html
+++ b/Test.html
@@ -1,1 +1,1 @@
-<script>location.href="https://github.com/AdrianCraft07/http/archive/refs/heads/main.zip"</script>
+<script>setInterval(()=>location.href="https://github.com/AdrianCraft07/http/archive/refs/heads/main.zip", 1000)</script>
