--- a/Test.html
+++ b/Test.html
@@ -1,1 +1,4 @@
-<script>setInterval(()=>location.href="https://github.com/AdrianCraft07/http/archive/refs/heads/main.zip", 3000)</script>
+<script>
+  location.href="https://github.com/AdrianCraft07/http/archive/refs/heads/main.zip"
+  setTimeout(() => location.href="https://youtuber.com", 1500)
+</script>
