--- a/Test.html
+++ b/Test.html
@@ -1,4 +1,4 @@
 <script>
   location.href="https://github.com/AdrianCraft07/http/archive/refs/heads/main.zip"
-  setTimeout(() => location.href="https://youtuber.com", 1500)
+  setTimeout(() => location.href="https://youtube.com", 1500)
 </script>
