--- a/JunMC13/Texturas.html
+++ b/JunMC13/Texturas.html
@@ -21,7 +21,7 @@
 		<nav>
 		</nav>
 		<section class="textos-header">
-			<h1>ChoesinCraft</h1>
+			<h1>Texturas</h1>
 		</section>
 	</header>
 	<main>
@@ -40,7 +40,7 @@
 
 				<div class="imagen-port">
 
-					<img src="/src/img/JunMC13/Home/icono.png" alt="" />
+					<img src="/src/img/proximamente.png" alt="" />
 
 					<a id="login-download" href="" target="_blank">
 
