--- a/addons/Iron-Chest.html
+++ b/addons/Iron-Chest.html
@@ -22,7 +22,7 @@
     </header>
     <main>
       <section class="section-1">
-        <h4 class="titulo">Home</h4>
+        <h4 class="titulo">Iron Chest</h4>
         <div class="texto-box">
           <h3 class="texto">
             "Iron Chest" agrega cofres de Hierro, Oro, Diamante, Cobre y Cristal
