--- a/addons/index.html
+++ b/addons/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Addons|AdrianCraft</title>
+    <title>Addons | AdrianCraft</title>
     <link rel="shortcut icon" href="/src/img/icono.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/src/css/links.css" />
     <link rel="stylesheet" href="/src/css/estilos.css" />
     <script src="/js/api/data.js"></script>
     <script src="/js/api/runner.js"></script>
-    <script>addApiTA('addons');</script>
+    <script>addApi('addon');</script>
   </head>
   <body>
     <header>
