--- a/JunMC13/index.html
+++ b/JunMC13/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Contenido de JunMC13|AdrianCraft</title>
+    <title>Contenido de JunMC13 | AdrianCraft</title>
     <link rel="shortcut icon" href="/src/img/icono.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/src/css/links.css" />
     <link rel="stylesheet" href="/src/css/estilos.css" />
     <script src="/js/api/data.js"></script>
     <script src="/js/api/runner.js"></script>
-    <script>addApiTA('JunMC13');</script>
+    <script>addApi('JunMC13');</script>
   </head>
   <body>
     <header id="JunMC13">
