--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="Página para descargar los addons de Minecraft Bedrock hechos por AdriánCraft">
-    <title>Inicio|AdrianCraft</title>
+    <title>Inicio | AdrianCraft</title>
     <link rel="shortcut icon" href="/src/img/icono.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/src/css/links.css" />
     <link rel="stylesheet" href="/src/css/estilos.css" />
     <script src="/js/api/data.js"></script>
     <script src="/js/api/runner.js"></script>
-    <script>addApiIndex('main');</script>
+    <script>addApi();</script>
   </head>
   <body>
     <header>
@@ -21,13 +21,15 @@
         <h1>Mejora tu Minecraft</h1>
         <h2>Con estos addons y texturas</h2>
       </section>
-      <div class="wave">
-        <svg viewBox="0 0 500 150" preserveAspectRatio="none">
-          <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"></path>
-        </svg>
-      </div>
     </header>
     <main>
+      <section class="section-1">
+        <div class="contenedor">
+          <h4 class="titulo">Aga</h4>
+          <div class="galeria-port">
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
     </footer>
