--- a/JunMC13.html
+++ b/JunMC13.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="Error 404">
-    <title>404|AdrianCraft</title>
+    <title>Contenido de JunMC13 | AdrianCraft</title>
     <link rel="shortcut icon" href="/src/img/icono.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/src/css/links.css" />
     <link rel="stylesheet" href="/src/css/estilos.css" />
-    <script>window.is404 = true</script>
     <script src="/js/api/data.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script>window.type = 'JunMC13'</script>
     <script src="/js/api/show.js"></script>
+  <script src="/js/login.js"></script>
+  <script src="/js/download.js"></script>
   </head>
   <body>
-    <header>
+    <header id="JunMC13">
       <input type="text" id="search" />
       <button id="search">Buscar</button>
       <nav>
         <a v-for="l in nav" :href="l[0]">{{l[1]}}</a>
       </nav>
       <section class="textos-header">
-        <h1>Error 404</h1>
-        <h2>Pagina no encontrada</h2>
+        <h1>Contenido para JunMC13</h1>
       </section>
       <div class="wave">
         <svg viewBox="0 0 500 150" preserveAspectRatio="none">
@@ -35,10 +35,27 @@
     </header>
     <main>
       <section class="section-1">
-        <h4 class="titulo">404</h4>
-        <div class="texto-box">
-          <h3 class="texto"> No deberias estar aqui </h3>
-          <h3 class="texto"> Asegurate de que la pagina que buscas exista o que este bien escrita.</h3>
+        <h4 class="titulo">Contenido</h4>
+        <div class="texto-box"></div>
+        <div class="galeria-port"></div>
+        <div class="centro" id="login"></div>
+        <div class="contenedor">
+          <div class="galeria-port">
+            <div v-for="value in json" class="imagen-port">
+              <img
+                :src="value.image ? `/src/img/${value.route}/icono.png` : '/src/img/proximamente.png'"
+                alt=""
+              />
+              <a id="login-download" :href="value.URL">
+                <div class="hover-galeria">
+                  <img src="/src/img/click.png" alt="" />
+                  <p>
+                    {{value.name}} ({{value.private ? 'Privado' : 'Publico'}})
+                  </p>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
       </section>
     </main>
@@ -52,3 +69,4 @@
     </footer>
   </body>
 </html>
+
