--- a/JunMC13.html
+++ b/JunMC13.html
@@ -19,7 +19,7 @@
     <header id="JunMC13">
       <input type="text" id="search" />
       <button id="search">Buscar</button>
-      <button id="Signout">Cerrar Seción</button>
+      <button id="signout">Cerrar Seción</button>
       <nav>
         <a v-for="l in nav" :href="l[0]">{{l[1]}}</a>
       </nav>
