--- a/addons.html
+++ b/addons.html
@@ -45,7 +45,7 @@
                 <div class="hover-galeria">
                   <img src="/src/img/click.png" alt="" />
                   <p>
-                    {{value.name}} ({{value.private ? 'Privado' : 'Publico'}})
+                    {{value.name}} ({{value.url ? 'Publico' : 'Privado' }})
                   </p>
                 </div>
               </a>
