--- a/JunMC13.html
+++ b/JunMC13.html
@@ -16,6 +16,10 @@
   <script src="/js/download.js"></script>
   </head>
   <body>
+    <div id="spinner">
+      <div id="carga"></div>
+    </div>
+    <div id="content">
     <header id="JunMC13">
       <input type="text" id="search" />
       <button id="search">Buscar</button>
@@ -43,15 +47,12 @@
         <div class="contenedor">
           <div class="galeria-port">
             <div v-for="value in json" class="imagen-port">
-              <img
-                :src="value.image ? `/src/img/${value.route}/icono.png` : '/src/img/proximamente.png'"
-                alt=""
-              />
+              <img :src="value.icon" alt=""/>
               <a id="login-download" :href="value.URL">
                 <div class="hover-galeria">
                   <img src="/src/img/click.png" alt="" />
                   <p>
-                    {{value.name}} ({{value.private ? 'Privado' : 'Publico'}})
+                    {{value.name}} ({{value.url ? 'Publico' : 'Privado'}})
                   </p>
                 </div>
               </a>
@@ -67,7 +68,7 @@
           <a class="link-s" target="_blank" :href="link[1]">{{link[2]}}</a>
         </div>
       </div>
-    </footer>
+    </footer></div>
   </body>
 </html>
 
