--- a/index.html
+++ b/index.html
@@ -17,54 +17,56 @@
     <script src="/js/api/show.js"></script>
   </head>
   <body>
-    <header>
-      <input type="text" id="search" />
-      <button id="search">Buscar</button>
-      <nav>
-        <a v-for="l in nav" :href="l[0]">{{l[1]}}</a>
-      </nav>
-      <section class="textos-header">
-        <h1>Mejora tu Minecraft</h1>
-        <h2>Con estos addons y texturas</h2>
-      </section>
-      <div class="wave">
-        <svg viewBox="0 0 500 150" preserveAspectRatio="none">
-          <path
-            d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-          ></path>
-        </svg>
-      </div>
-    </header>
-    <main>
-      <section class="section-1">
-        <h4 class="titulo">Aga</h4>
-        <div class="contenedor">
-          <div class="galeria-port">
-            <div v-for="value in json" class="imagen-port">
-              <img
-                :src="value.image ? `/src/img/${value.route}/icono.png` : '/src/img/proximamente.png'"
-                alt=""
-              />
-              <a id="login-download" :href="value.URL">
-                <div class="hover-galeria">
-                  <img src="/src/img/click.png" alt="" />
-                  <p>
-                    {{value.name}} ({{value.private ? 'Privado' : 'Publico'}})
-                  </p>
-                </div>
-              </a>
+    <div id="spinner">
+      <div id="carga"></div>
+    </div>
+    <div id="content">
+      <header>
+        <input type="text" id="search" />
+        <button id="search">Buscar</button>
+        <nav>
+          <a v-for="l in nav" :href="l[0]">{{l[1]}}</a>
+        </nav>
+        <section class="textos-header">
+          <h1>Mejora tu Minecraft</h1>
+          <h2>Con estos addons y texturas</h2>
+        </section>
+        <div class="wave">
+          <svg viewBox="0 0 500 150" preserveAspectRatio="none">
+            <path
+              d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+            ></path>
+          </svg>
+        </div>
+      </header>
+      <main>
+        <section class="section-1">
+          <h4 class="titulo">Aga</h4>
+          <div class="contenedor">
+            <div class="galeria-port">
+              <div v-for="value in json" class="imagen-port">
+                <img :src="value.icon" alt=""/>
+                <a id="login-download" :href="value.URL">
+                  <div class="hover-galeria">
+                    <img src="/src/img/click.png" alt="" />
+                    <p>
+                      {{value.name}} ({{value.url ? 'Publico' : 'Privado'}})
+                    </p>
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
+        </section>
+      </main>
+      <footer>
+        <div class="contenedor-footer">
+          <div class="content-foo" v-for="link in footer">
+            <h4>{{link[0]}}</h4>
+            <a class="link-s" target="_blank" :href="link[1]">{{link[2]}}</a>
+          </div>
         </div>
-      </section>
-    </main>
-    <footer>
-      <div class="contenedor-footer">
-        <div class="content-foo" v-for="link in footer">
-          <h4>{{link[0]}}</h4>
-          <a class="link-s" target="_blank" :href="link[1]">{{link[2]}}</a>
-        </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
