--- a/texturas.html
+++ b/texturas.html
@@ -41,11 +41,11 @@
           <div class="galeria-port">
             <div v-for="value in json" class="imagen-port">
               <img :src="value.icon" alt=""/>
-              <a :href="value.URL">
+              <a id="login-download" :href="value.URL">
                 <div class="hover-galeria">
                   <img src="/src/img/click.png" alt="" />
                   <p>
-                    {{value.name}} ({{value.private ? 'Privado' : 'Publico'}})
+                    {{value.name}} ({{value.url ? 'Publico' : 'Privado'}})
                   </p>
                 </div>
               </a>
