--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <header>
         <input type="text" id="search" />
         <button id="search">Buscar</button>
+        <button id="signout">Cerrar Sesión</button>
         <nav>
           <a v-for="l in nav" :href="l[0]">{{l[1]}}</a>
         </nav>
