--- a/addons.html
+++ b/addons.html
@@ -19,6 +19,7 @@
     <header>
       <input type="text" id="search" />
       <button id="search">Buscar</button>
+        <button id="signout" style="display:none">Cerrar Sesión</button>
       <nav>
         <a v-for="l in nav" :href="l[0]">{{l[1]}}</a>
       </nav>
