--- a/JunMC13.html
+++ b/JunMC13.html
@@ -23,7 +23,7 @@
     <header id="JunMC13">
       <input type="text" id="search" />
       <button id="search">Buscar</button>
-      <button id="signout" style="display: none;">Cerrar Seción</button>
+      <button id="signout" style="display: none;">Cerrar Sesión</button>
       <nav>
         <a v-for="l in nav" :href="l[0]">{{l[1]}}</a>
       </nav>
