--- a/JunMC13.html
+++ b/JunMC13.html
@@ -12,8 +12,9 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>window.type = 'JunMC13'</script>
     <script src="/js/api/show.js"></script>
-  <script src="/js/login.js"></script>
-  <script src="/js/download.js"></script>
+    <script src="/js/load.js"></script>
+    <script src="/js/login.js"></script>
+    <script src="/js/download.js"></script>
   </head>
   <body>
     <div id="content">
