--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
     <script src="/js/api/data.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="/js/api/show.js"></script>
+    <script src="/js/load.js"></script>
   </head>
   <body>
-    <div id="spinner">
-      <div id="carga"></div>
-    </div>
     <div id="content">
       <header>
         <input type="text" id="search" />
@@ -68,6 +66,9 @@
           </div>
         </div>
       </footer>
+    </div>
+    <div id="spinner">
+      <div id="carga"></div>
     </div>
   </body>
 </html>
