--- a/texturas.html
+++ b/texturas.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>window.type = 'textura'</script>
     <script src="/js/api/show.js"></script>
+    <script src="/js/load.js"></script>
   </head>
   <body>
     <header>
@@ -63,5 +64,8 @@
         </div>
       </div>
     </footer>
+    <div id="spinner">
+      <div id="carga"></div>
+    </div>
   </body>
 </html>
