--- a/addons.html
+++ b/addons.html
@@ -14,6 +14,7 @@
       window.type = 'addon';
     </script>
     <script src="/js/api/show.js"></script>
+    <script src="/js/load.js"></script>
   </head>
   <body>
     <header>
@@ -63,5 +64,8 @@
         </div>
       </div>
     </footer>
+    <div id="spinner">
+      <div id="carga"></div>
+    </div>
   </body>
 </html>
