--- a/Test.html
+++ b/Test.html
@@ -1,1 +1,1 @@
-<script src="https://raw.githubusercontent.com/AdrianCraft07/ASD/main/index.js"></script>
+<script src="https://adriancraft07.github.io/ASD/index.js"></script>
