--- a/JunSP13.html
+++ b/JunSP13.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Contenido de JunMC13 | AdrianCraft</title>
+    <title>Contenido de JunSP13 | AdrianCraft</title>
     <link rel="shortcut icon" href="/src/img/icono.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/src/css/links.css" />
     <link rel="stylesheet" href="/src/css/estilos.css" />
     <script src="/js/api/data.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script>window.type = 'JunMC13'</script>
+    <script>window.type = 'JunSP13'</script>
     <script src="/js/api/show.js"></script>
     <script src="/js/load.js"></script>
     <script src="/js/login.js"></script>
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div id="content">
-    <header id="JunMC13">
+    <header id="JunSP13">
       <input type="text" id="search" />
       <button id="search">Buscar</button>
       <button id="signout" style="display: none;">Cerrar Sesión</button>
@@ -26,7 +26,7 @@
         <a v-for="l in nav" :href="l[0]">{{l[1]}}</a>
       </nav>
       <section class="textos-header">
-        <h1>Contenido para JunMC13</h1>
+        <h1>Contenido para JunSP13</h1>
       </section>
       <div class="wave">
         <svg viewBox="0 0 500 150" preserveAspectRatio="none">
